updated test cases